tests/ui/children_messages.stderr
warning: panic message is not a string literal
   --> $DIR/lib.rs:472:12
    |
472 |     panic!(AbortNow)
    |            ^^^^^^^^
    |
    = note: `#[warn(non_fmt_panics)]` on by default
    = note: this usage of panic!() is deprecated; it will be a hard error in Rust 2021
    = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/panic-macro-consistency.html>
help: add a "{}" format string to Display the message
    |
472 |     panic!("{}", AbortNow)
    |            ^^^^^
help: or use std::panic::panic_any instead
    |
472 |     std::panic::panic_any(AbortNow)
    |     ^^^^^^^^^^^^^^^^^^^^^

error: main macro message
 --> $DIR/children_messages.rs:4:20
  |
4 | children_messages!(one, two, three, four);
  |                    ^^^

error: child message
 --> $DIR/children_messages.rs:4:25
  |
4 | children_messages!(one, two, three, four);
  |                         ^^^

error: main syn::Error
 --> $DIR/children_messages.rs:4:30
  |
4 | children_messages!(one, two, three, four);
  |                              ^^^^^

error: child syn::Error
 --> $DIR/children_messages.rs:4:37
  |
4 | children_messages!(one, two, three, four);
  |                                     ^^^^
